--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #ddd;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -66,8 +66,5 @@ button:focus-visible {
   }
   a:hover {
     color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
