--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,45 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'SF-Pro';
+  src: local('SF-Pro-Rounded'), url(./assets/fonts/SF-Pro-Rounded-Regular.otf) format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SF-Pro';
+  src: local('SF-Pro-Rounded'), url(./assets/fonts/SF-Pro-Rounded-Medium.otf) format('opentype');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SF-Pro';
+  src: local('SF-Pro-Rounded'), url(./assets/fonts/SF-Pro-Rounded-Semibold.otf) format('opentype');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'SF-Pro';
+  src: local('SF-Pro-Rounded'), url(./assets/fonts/SF-Pro-Rounded-Bold.otf) format('opentype');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Nunito';
+  src: local('Nunito'), url(./assets/fonts/Nunito-Regular.ttf) format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Nunito';
+  src: local('Nunito'), url(./assets/fonts/Nunito-SemiBold.ttf) format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'SF-Pro', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.25em;
   font-weight: 400;
 
