--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,8 @@
 }
 
 #root {
-  max-width: 960px;
+  width: 100%;
+  max-width: 800px;
   margin: 0 auto;
   text-align: center;
 }
@@ -74,14 +75,6 @@ h1 {
 }
 
 button {
-  padding: 0.2em 0.4em;
-  font-size: 1em;
-  font-weight: 600;
   font-family: inherit;
   cursor: pointer;
-  transition: all 0.25s;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
 }
