--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@
 
 :root {
   font-family: 'SF-Pro', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
   line-height: 1.25em;
   font-weight: 400;
 
@@ -71,6 +72,7 @@ body {
 h1 {
   font-size: 32px;
   line-height: 40px;
+  font-weight: 700;
 }
 
 button {
