--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,16 @@ button {
   font-family: inherit;
   cursor: pointer;
 }
+
+textarea,
+input {
+  outline: none;
+  background: none;
+  appearance: none;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  appearance: none;
+  margin: 0;
+}
